--- a/Lesson3_Assignment/index.html
+++ b/Lesson3_Assignment/index.html
@@ -73,7 +73,7 @@
         <div class="headline">
             <div class="container">
                 <h2>Lesson 2 Highlights</h2>
-                <h3>INSERT YOUR NAME</h3>
+                <h3>Michael Uria</h3>
             </div>
         </div>
     </header>
