Final Website for Lesson 3

--- a/Lesson3_Assignment/index.html
+++ b/Lesson3_Assignment/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
    <!--
       LIS 2360:  Web Application Development
-      Assignment:  Lesson 1
+      Assignment:  Lesson 3
 
-      Author: 
-      Date:   
+      Author: Michael Uria
+      Date:   9/11/2015
 
       Filename: index.html
    -->
@@ -72,7 +72,7 @@
     <header class="header-image">
         <div class="headline">
             <div class="container">
-                <h2>Lesson 2 Highlights</h2>
+                <h2>Lesson 3 Highlights</h2>
                 <h3>Michael Uria</h3>
             </div>
         </div>
@@ -85,33 +85,33 @@
 
         <!-- First Featurette -->
         <div class="featurette" id="about">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-right" src="https://homes.cs.washington.edu/~mernst/advice/version-control-fig2.png">
             <h2 class="featurette-heading">Highlight #1
-                <span class="text-muted">Topic 1 Header</span>
+                <span class="text-muted">Version Control</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">This topic is pretty relevant to me and it was refreshing to cover it in class to say the least. Version control is extremely essential in today's growing world of cloud collaboration. By having a main repository, you put all of your eggs in one basket, and it eliminates many risks like missing files that disable project workflow or file thefts. I personally use a cloud collaboration tool for music producing called Splice that has an amazing Version Control system. </p>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Second Featurette -->
         <div class="featurette" id="services">
-            <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-left" src="https://support.splice.com/hc/en-us/article_attachments/201040218/Screenshot_2015-01-22_16.08.22.png">
             <h2 class="featurette-heading">Highlight #2
-                <span class="text-muted">Topic 2 Header</span>
+                <span class="text-muted">Remote vs. Local Repositories</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Splice for an example, uses both remote and local repositories. The image displayed for this entry is the user interface for the desktop app, which shows the local repository. Once a music producer like myself finishes an edit on a song, the save file goes into a local repository (your computer). If the track has other collaborators, they will be notified of the change as the file transfers over to the remote repository, in this case, Splice's servers. Once the file is in the remote repository, the other collaborators can download it and continue to work on the new version of the song! Cloud collaboration is truly a fascinating thing! </p>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Third Featurette -->
         <div class="featurette" id="contact">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-right" src="https://git-for-windows.github.io/img/git_logo.png">
             <h2 class="featurette-heading">Highlight #3
-                <span class="text-muted">Topic 3 Header</span>
+                <span class="text-muted">What is GIT? Why should we use it?</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">In sum, GIT is a free version control system that allows for the handling of projects and the flow of information in an efficient manner. Git is specifically useful because every single user has a complete copy of the repositories data to be stored locally which is great because the user can then work locally without the need to be connected to the network. It also prevents unintentional overwriting of files in the shared repository. </p>
         </div>
 
         <hr class="featurette-divider">
